// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider defaultValue 1`] = `
<div
  class="za-slider"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="10"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;

exports[`Slider disabled 1`] = `
<div
  class="za-slider disabled"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;

exports[`Slider max 1`] = `
<div
  class="za-slider"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;

exports[`Slider min 1`] = `
<div
  class="za-slider"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;

exports[`Slider renders correctly 1`] = `
<div
  class="za-slider"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;

exports[`Slider step 1`] = `
<div
  class="za-slider"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;

exports[`Slider value 1`] = `
<div
  class="za-slider"
>
  <div
    class="za-slider-line"
  >
    <div
      class="za-slider-line-bg"
      style="width:0;"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="10"
    class="za-slider-handle"
    role="slider"
    style="left:0;"
  >
    <div
      class="za-slider-handle-shadow"
    />
  </div>
</div>
`;
